# kgc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  connection.c  connection.h  errors.c  errors.h  keypad.c  keypad.h  kgc.c  kgc_pc.py  kgc_server.py  led.c  led.h  max7219.c  max7219.h  pip_requirements.txt
3dprint/: dsky_cover_back.SLDPRT  dsky_cover_front.SLDPRT  dsky_keycap.SLDPRT
3dprint/print/: dsky_cover_back.STL  dsky_cover_front.STL  dsky_keycap.STL
doc/: ascent_truth_table.csv  verb_noun_list.csv
kicad/: displays_leds.kicad_sch  fp-lib-table  keyboard.kicad_sch  kgc-eagle-import.kicad_sym  kgc.kicad_pcb  kgc.kicad_pro  kgc.kicad_sch  kgc.rules  place_footprints.ini  sym-lib-table  usb.kicad_sch
kicad/RP2350_80QFN.pretty/: RP2350-QFN-80-1EP_10x10_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod
kicad/other_things.pretty/: Buzzer_XDCR_CPT-1203-03-SMT-TR.kicad_mod  SW_Cherry_MX_1.00u_PCB.kicad_mod
